<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bolt_tools</name>
  <version>0.0.0</version>
  <description>Launch and rosbag tools for Orbbec Femto Bolt.</description>
  <maintainer email="oit@todo.todo">oit</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>oit_rosbag</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
